tests/snapshots/compile_file_o_all__inline_app.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/inline_app.bend
---
@Rul1__M_Rul2 = (a a)

@Rul3 = a
  & @Rul1__M_Rul2 ~ (@Rul1__M_Rul2 a)

@main = a
  & @Rul3 ~ (@Rul3 a)
