tests/snapshots/compile_file_o_all__inline_app.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/inline_app.hvm
---
@Rul1_$_Rul2 = (a a)

@Rul3 = a
  & @Rul1_$_Rul2 ~ (@Rul1_$_Rul2 a)

@main = a
  & @Rul3 ~ (@Rul3 a)
