tests/snapshots/compile_file_o_all__inlining.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/inlining.bend
---
@main = a
  & * ~ (42 (* a))
