tests/snapshots/compile_file_o_all__inlining.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/inlining.hvm
---
@main = a
  & * ~ (#673 (* a))
