tests/snapshots/compile_file_o_all__let_adt_destructuring.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/let_adt_destructuring.hvm
---
@8 = ({2 @A a} a)
@A = {4 a a}
@Box = (a {2 {4 a b} b})
@main = a
& @8 ~ (b a)
& @Box ~ (#1 b)

