tests/snapshots/compile_file_o_all__let_adt_non_exhaustive.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/let_adt_non_exhaustive.hvm
---
Errors:
In definition 'main':
  Non-exhaustive pattern matching. Hint:
    Case 'None' not covered.
