tests/snapshots/compile_file_o_all__linearize_match.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/linearize_match.bend
---
@main = (?(((a a) ($([+] $(b c)) (b c))) d) d)
