tests/snapshots/compile_file_o_all__linearize_match.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/linearize_match.hvm
---
@main = (?(((a a) (b (c d))) e) e)
  & $(b $(c d)) ~ #0
