tests/snapshots/compile_file_o_all__list_merge_sort.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/list_merge_sort.hvm
---
@Cons = (a (b {8 {8 a {8 b c}} {8 * c}}))

@Map$C0 = {8 a {8 {8 @Map$C0 {8 (* @Nil) (b c)}} ({2 (a d) b} {8 {8 d {8 c e}} {8 * e}})}}

@Merge$C0 = (* @Cons)

@Merge$C1 = {8 {6 a {6 b c}} {8 {10 d {8 @Merge$C1 {8 @Merge$C0 (e (f (g h)))}}} ({14 (i (a {4 (j (* j)) {4 (* (k k)) ({8 {8 l {8 m n}} {8 * n}} ({8 {8 c {8 h o}} {8 * o}} p))}})) {14 q e}} ({18 i {18 l f}} ({22 {8 @Merge$C2 {8 (* (r r)) (q ({8 {8 b {8 d s}} {8 * s}} m))}} g} p)))}}

@Merge$C2 = {8 a {8 b (c ({8 @Merge$C1 {8 @Merge$C0 (c (a (b d)))}} d))}}

@MergePair$C0 = (* (a {8 {8 a {8 @Nil b}} {8 * b}}))

@MergePair$C1 = {8 a {8 {8 @MergePair$C2 {8 (* @Nil) (b c)}} ({26 d b} ({8 @Merge$C2 {8 (* (e e)) (d (a f))}} {8 {8 f {8 c g}} {8 * g}}))}}

@MergePair$C2 = {8 a {8 {8 @MergePair$C1 {8 @MergePair$C0 (b (a c))}} (b c)}}

@MergeSort = (a ({8 @Map$C0 {8 (* @Nil) (@Pure {8 @Unpack$C1 {8 (* @Nil) (a b)}})}} b))

@Nil = {8 * {8 a a}}

@Pure = (a {8 {8 a {8 @Nil b}} {8 * b}})

@Unpack$C0 = {8 a {8 {8 @MergePair$C2 {8 (* @Nil) (b {8 @Unpack$C0 {8 (* (c c)) (d (e f))}})}} ({30 d {26 g b}} ({8 @Merge$C2 {8 (* (h h)) (g (a e))}} f))}}

@Unpack$C1 = {8 a {8 {8 @Unpack$C0 {8 (* (b b)) (c (a d))}} (c d)}}

@main = @MergeSort
